# chafenqi-android

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts  version.properties
app/: CMakeLists.txt  build.gradle.kts  google-services.json  version.properties
app/release/: output-metadata.json
app/src/androidTest/java/com/nltv/chafenqi/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: dhcp.c  dns.c  http.c  http.h  icmp.c  ip.c  session.c  tcp.c  tls.c  tls.h  tun2http.c  tun2http.h  udp.c  util.c
app/src/main/java/com/nltv/chafenqi/: CFQUserStateViewModel.kt  ChafenqiApplication.kt  ChafenqiProxy.kt  MainActivity.kt
app/src/main/java/com/nltv/chafenqi/data/: ChunithmLeaderboard.kt  ChunithmMusicStat.kt  Comment.kt  GameMusicStat.kt  MaimaiLeaderboard.kt  VersionData.kt
app/src/main/java/com/nltv/chafenqi/extension/: ClassExtensions.kt  Marker.kt  Utils.kt  Values.kt
app/src/main/java/com/nltv/chafenqi/glance/: CFQAppWidget.kt  GlanceReceiver.kt
app/src/main/java/com/nltv/chafenqi/networking/: CFQProxyConnection.kt  CFQServer.kt  CFQTeamServer.kt  FishServer.kt
app/src/main/java/com/nltv/chafenqi/storage/: CFQUser.kt  PreferenceStoreItem.kt  SettingsStore.kt
app/src/main/java/com/nltv/chafenqi/updater/: ChafenqiProxy.kt  (+1 more)
app/src/main/res/drawable/: tile_upload_icon.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: app_widget_info.xml  provider_paths.xml
app/src/main/res/xml-v31/: app_widget_info.xml
app/src/test/java/com/nltv/chafenqi/: ExampleUnitTest.kt
(+274 files in other folders)
